[issue-5] API skeleton with health checks and collection management (#39)
## Summary
- Adds `GET /api/health` with live probes for Qdrant (gRPC), Ollama, and
embed-sidecar; returns `ok` when Qdrant and embed-sidecar are connected,
`degraded` otherwise
- Implements Qdrant collection lifecycle: `POST /api/ingest/collection`,
`GET /api/ingest/collections`, `DELETE /api/ingest/collection/{name}`
- Wires `CollectionManager`, `GlobalExceptionHandler`, CORS config,
Qdrant gRPC client (`io.qdrant:client` 1.14.1), and API `Dockerfile`

## Test plan
- [x] `make test-api` — 9 unit tests pass (`HealthControllerTest`,
`IngestControllerTest`, context load)
- [x] `make test-int` — Testcontainers integration tests
(`CollectionManagerIT`, `HealthControllerIT`) require Docker
- [x] Manual: `docker compose up qdrant` then create/list/delete
`news_radar` collection via curl


Made with [Cursor](https://cursor.com)

Co-authored-by: Cursor <cursoragent@cursor.com>